--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
   <!-- TOP CONTAINER -->
   <section class="top-container">
 
-    <header>
-      <img class="logo" src="img/logo.svg">
-      <button class="try-it-free-button"><a href="#">Try It Free</a></button>
-    </header>
+    <div class="header row">
+      <div class="col-md-6">
+        <img class="logo" src="img/logo.svg">
+      </div>
+      <div class="mobile-size-top-button col-md-6">
+        <button class="try-it-free-button"><a href="#">Try It Free</a></button>
+      </div>
+    </div>
+      
+      
     <div class="row">
    
       <div class="top-left col-lg-6">
